--- a/src/main.scss
+++ b/src/main.scss
@@ -5,3 +5,14 @@ h1
     size: 100px;
     color: $foreColor;
 }
+
+
+a{
+    color: red;
+
+    &:hover {
+        text-decoration: none;
+        border-bottom: 1px double black;
+        padding: 10px;
+    }
+}
